php-parser, readme, delete delete echo

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better PHP Error Logger",
     "description": "A PHP error logger with customization options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.0.10",
+    "version": "0.1.05",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -245,5 +245,8 @@
     "author": {
         "name": "Martin Vest Zielke"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "php-parser": "^3.1.1"
+    }
 }
