--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better PHP Error Logger",
     "description": "A PHP error logger with customization options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.1.12",
+    "version": "0.1.13",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -49,7 +49,7 @@
         "onCommand:extension.betterPhpErrorLogger.printCurrentOutputBufferVarDump",
         "onCommand:extension.betterPhpErrorLogger.printCurrentOutputBufferUseEcho"
     ],
-    "main": "./built/extension.js",
+    "main": "./out/main.js",
     "contributes": {
         "commands": [
             {
