TIme change, bundle, fix gitignore

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "onCommand:extension.betterPhpErrorLogger.printCurrentOutputBufferVarDump",
         "onCommand:extension.betterPhpErrorLogger.printCurrentOutputBufferUseEcho"
     ],
-    "main": "./out/extension.js",
+    "main": "./out/main.js",
     "contributes": {
         "commands": [
             {
